refactor: 💡 add routes to header dynamically

--- a/src/pages/categorias/index.astro
+++ b/src/pages/categorias/index.astro
@@ -18,16 +18,15 @@ const pageTitle = 'Categorias'
     bgColor: 'bg-transparent',
     textColor: 'text-cotton-candy',
     showLogin: true,
-    buttonsStyle: Colors.CottonCandy
+    buttonsStyle: Colors.CottonCandy,
+    routes: [{ route: '/', name: 'Inicio' }]
   }}
 >
   <div class='grid items-center justify-center gap-y-28'>
     <!-- TITULO DE CATEGORIA -->
     <div class='flex justify-center'>
-      <h1
-        class=`text-[4rem] font-semibold text-cotton-candy tracking-wide underline`
-      >
-        Categorias
+      <h1 class=`text-5xl font-semibold text-cotton-candy tracking-wide`>
+        Categorías
       </h1>
     </div>
   </div>
