--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,8 @@ const items = [
     bgColor: 'bg-cotton-candy',
     textColor: 'text-black',
     showSocials: true,
-    buttonsStyle: Colors.BlackPearl
+    buttonsStyle: Colors.BlackPearl,
+    routes: [{ route: '/categorias', name: 'Categorias' }]
   }}
 >
   <div
