--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,29 +6,33 @@ import Discord from './icons/Discord.astro'
 export interface Props {
   bgColor: string
   textColor: string
+  routes?: { route: string; name: string }[]
   showSocials?: boolean
   showLogin?: boolean
   buttonsStyle: Colors 
 }
 
-const { bgColor, textColor, showSocials, showLogin, buttonsStyle } = Astro.props
+const { bgColor, textColor, showSocials, showLogin, buttonsStyle, routes } = Astro.props
 const user = Astro.locals.user
 const showSignOut = import.meta.env.SHOW_SIGN_OUT === 'true'
 ---
 
-<header class=`flex flex-row items-center gap-7 p-5 text-2xl ${bgColor}`>
+<header class=`flex flex-row items-center gap-4 py-5 px-12 text-2xl ${bgColor}`>
   <a href='/'>
-    <div class='h-10 w-10 rounded-full bg-[radial-gradient(#000,#0000)]'>
+    <div class='size-12 rounded-full bg-[radial-gradient(#000,#0000)]'>
       <div
-        class="h-10 w-10 bg-[url('/peepoZeling.webp')] bg-[_80%_80%] bg-center bg-no-repeat"
+        class="size-12 bg-[url('/peepoZeling.webp')] bg-[_80%_80%] bg-center bg-no-repeat"
       >
       </div>
     </div>
   </a>
 
   <nav class=`flex items-center justify-center gap-7 ${textColor}`>
-    <!-- <a href='#'>Vota</a> -->
-    <a href='/categorias'>Categorias</a>
+    {
+      routes?.map(({ route, name }) => (
+        <a href={route}>{name}</a>
+      ))
+    }
   </nav>
   <div class='flex-grow'></div>
   {
