--- a/src/pages/categorias/[categoryUrl].astro
+++ b/src/pages/categorias/[categoryUrl].astro
@@ -11,13 +11,22 @@ const category: Category = await response.json()
 
 const title = category.name
 
+const candidates = category.videos
+
 const prev = category.prev?.url
 const next = category.next?.url
-
-//FORMATO DE TITULO
-
-const span_format = `hidden lg:block bg-cotton-candy self-end mb-[12px] h-[4px]`
 ---
+
+<style>
+  .candidate:hover .image {
+    transform: scale(1.2);
+  }
+  .candidate:hover .overlay-pink {
+    display: flex;
+    background: rgba(255, 102, 148, 0.4);
+    backdrop-filter: blur(2px) contrast(1.5);
+  }
+</style>
 
 <Layout
   title={title}
@@ -39,128 +48,31 @@ const span_format = `hidden lg:block bg-cotton-candy self-end mb-[12px] h-[4px]`
     class="flex min-h-[90svh] bg-[url('/Prayge.svg')] bg-[_80%_80%] bg-bottom bg-no-repeat"
   >
     <!-- FORMULARIO DE VOTACION -->
-    <form
-      class='flex w-screen flex-1 flex-col justify-around [&>div>button]:has-[:checked]:bg-gradient-to-tr'
-      action='#'
-      method='#'
-    >
+    <div class='flex w-screen flex-1 flex-col justify-around'>
       <!-- TITULO DE CATEGORIA -->
       <div class='flex justify-center'>
-        <div class='grid-cols-[1fr_auto_1fr] lg:grid 2xl:w-[40%]'>
-          <div class=`${span_format}`></div>
-          <h1 class=`text-[4rem] font-semibold text-cotton-candy tracking-wide`>
-            {title}
-          </h1>
-          <span class=`${span_format}`></span>
-        </div>
+        <h1 class=`text-[4rem] font-semibold text-cotton-candy tracking-wide`>
+          {title}
+        </h1>
       </div>
       <!-- CANDIDATOS -->
-      <!-- <div class='flex flex-wrap justify-center'>
-        <div class='flex flex-wrap justify-center'>
-          <label
-            class=`border-[3px] border-transparent m-5
-                has-[:checked]:border-carnation-500
-                [&>div>.title]:has-[:checked]:flex
-                [&>div>img]:has-[:checked]:blur-[2px]`
-          >
-            <div
-              class=`m-3 flex h-[13.5rem] w-[24rem]
-                  bg-[#ffb8cf80] hover:cursor-pointer`
-            >
-              <input
-                class='absolute h-0 w-0 opacity-0'
-                type='radio'
-                name={title}
-                value='1'
+      <div class='flex flex-wrap justify-center gap-8'>
+        {
+          candidates?.map(({ title, thumbnail_url }) => (
+            <div class='candidate relative h-52 w-72 overflow-hidden bg-slate-600 outline-2 outline-offset-4 outline-cotton-candy-400 hover:outline'>
+              <div
+                style={`background-image: url(${thumbnail_url})`}
+                class='image left-0 top-0 h-full w-full bg-cover bg-no-repeat'
               />
-              <Candidate
-                categoria={title}
-                title={candidate1.nominado}
-                image={candidate1.img}
-                href={candidate1.url}
-                id='1'
-              />
+              <div class='overlay-pink absolute left-0 top-0 hidden h-full w-full cursor-pointer items-center justify-center bg-neutral-900 text-4xl text-white'>
+                <div class='flex h-full w-full items-center justify-center bg-black bg-opacity-60'>
+                  {title}
+                </div>
+              </div>
             </div>
-          </label>
-          <label
-            class=`border-[3px] border-transparent m-5
-                has-[:checked]:border-carnation-500
-                [&>div>.title]:has-[:checked]:flex
-                [&>div>img]:has-[:checked]:blur-[2px]`
-          >
-            <div
-              class=`m-3 flex h-[13.5rem] w-[24rem]
-                  bg-[#ffb8cf80] hover:cursor-pointer`
-            >
-              <input
-                class='absolute h-0 w-0 opacity-0'
-                type='radio'
-                name={title}
-                value='2'
-              />
-              <Candidate
-                categoria={title}
-                title={candidate2.nominado}
-                image={candidate2.img}
-                href={candidate2.url}
-                id='2'
-              />
-            </div>
-          </label>
-        </div>
-        <div class='flex flex-wrap justify-center'>
-          <label
-            class=`border-[3px] border-transparent m-5
-                has-[:checked]:border-carnation-500
-                [&>div>.title]:has-[:checked]:flex
-                [&>div>img]:has-[:checked]:blur-[2px]`
-          >
-            <div
-              class=`m-3 flex h-[13.5rem] w-[24rem]
-                  bg-[#ffb8cf80] hover:cursor-pointer`
-            >
-              <input
-                class='absolute h-0 w-0 opacity-0'
-                type='radio'
-                name={title}
-                value='3'
-              />
-              <Candidate
-                categoria={title}
-                title={candidate3.nominado}
-                image={candidate3.img}
-                href={candidate3.url}
-                id='3'
-              />
-            </div>
-          </label>
-          <label
-            class=`border-[3px] border-transparent m-5
-                has-[:checked]:border-carnation-500
-                [&>div>.title]:has-[:checked]:flex
-                [&>div>img]:has-[:checked]:blur-[2px]`
-          >
-            <div
-              class=`m-3 flex h-[13.5rem] w-[24rem]
-                  bg-[#ffb8cf80] hover:cursor-pointer`
-            >
-              <input
-                class='absolute h-0 w-0 opacity-0'
-                type='radio'
-                name={title}
-                value='4'
-              />
-              <Candidate
-                categoria={title}
-                title={candidate4.nominado}
-                image={candidate4.img}
-                href={candidate4.url}
-                id='4'
-              />
-            </div>
-          </label>
-        </div>
-      </div> -->
+          ))
+        }
+      </div>
 
       <!-- BOTONES DE NAVEGACION Y CONFIRMACION -->
       <div class='flex justify-between sm:px-28'>
@@ -202,6 +114,6 @@ const span_format = `hidden lg:block bg-cotton-candy self-end mb-[12px] h-[4px]`
           )
         }
       </div>
-    </form>
+    </div>
   </div>
 </Layout>
