--- a/src/pages/categorias/[categoryUrl].astro
+++ b/src/pages/categorias/[categoryUrl].astro
@@ -5,6 +5,7 @@ import Layout from '../../layouts/Layout.astro'
 import Arrow from '../../components/icons/Arrow.astro'
 import Colors from '../../enums/colors'
 import { GET } from '../api/category/[categoryUrl]'
+import CandidateSelector from '../../components/CandidateSelector'
 
 const response = await GET(Astro)
 const category: Category = await response.json()
@@ -16,17 +17,6 @@ const candidates = category.videos
 const prev = category.prev?.url
 const next = category.next?.url
 ---
-
-<style>
-  .candidate:hover .image {
-    transform: scale(1.2);
-  }
-  .candidate:hover .overlay-pink {
-    display: flex;
-    background: rgba(255, 102, 148, 0.4);
-    backdrop-filter: blur(2px) contrast(1.5);
-  }
-</style>
 
 <Layout
   title={title}
@@ -56,23 +46,7 @@ const next = category.next?.url
         </h1>
       </div>
       <!-- CANDIDATOS -->
-      <div class='flex flex-wrap justify-center gap-8'>
-        {
-          candidates?.map(({ title, thumbnail_url }) => (
-            <div class='candidate relative h-52 w-72 overflow-hidden bg-slate-600 outline-2 outline-offset-4 outline-cotton-candy-400 hover:outline'>
-              <div
-                style={`background-image: url(${thumbnail_url})`}
-                class='image left-0 top-0 h-full w-full bg-cover bg-no-repeat'
-              />
-              <div class='overlay-pink absolute left-0 top-0 hidden h-full w-full cursor-pointer items-center justify-center bg-neutral-900 text-4xl text-white'>
-                <div class='flex h-full w-full items-center justify-center bg-black bg-opacity-60'>
-                  {title}
-                </div>
-              </div>
-            </div>
-          ))
-        }
-      </div>
+      <CandidateSelector candidates={candidates} client:load />
 
       <!-- BOTONES DE NAVEGACION Y CONFIRMACION -->
       <div class='flex justify-between sm:px-28'>
