feat: 🎸 amend descriptions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,8 +50,7 @@ const items = [
     bgColor: 'bg-cotton-candy',
     textColor: 'text-black',
     showSocials: true,
-    buttonsStyle: Colors.BlackPearl,
-    routes: [{ route: '/categorias', name: 'Categorias' }]
+    buttonsStyle: Colors.BlackPearl
   }}
 >
   <div
